# kag

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.prod.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/: README.md
deploy/systemd/: kag-worker.service  kag.service
docs/: API.md  ARCHITECTURE.md  DATA_MODEL.md  DEPLOYMENT.md
docs/reviews/: F1-plan-compliance.md  F2-code-quality.md  F3-manual-qa.md  F4-scope-fidelity.md  FINAL-summary.md
scripts/: check_api_sync.py  smoke_test.sh
src/kag/: __init__.py  __main__.py  api.py  cli.py  config.py  logging_config.py  main.py  migrate.py
src/kag/api/: __init__.py  files.py  health.py  hybrid.py  kb.py  metrics.py  ontology.py  openapi.py  pipelines.py
src/kag/auth/: __init__.py  api_keys.py  dependencies.py
src/kag/db/: arango.py  qdrant.py  seaweedfs.py
src/kag/embeddings/: __init__.py  service.py
src/kag/graph/: __init__.py  extractor.py  prompt.py
src/kag/hybrid/: __init__.py  boundary.py  classifier.py  evidence.py  fusion.py  pipeline.py  retrievers.py
src/kag/ingestion/: __init__.py  blocks.py  chunker.py  extractors.py  pipeline.py
src/kag/llm/: client.py
src/kag/models/: __init__.py  api_key.py  enums.py  job.py  kb.py  ontology.py
src/kag/ontology/: __init__.py  schema.py  store.py
src/kag/store/: __init__.py  kb.py
src/kag/tasks/: __init__.py  celery_app.py  graph.py  vectorize.py
src/kag/vector_store/: __init__.py  writer.py
