[project]
name = "kag"
version = "0.1.0"
description = "Standalone Knowledge-Augmented Generation service: ontology management, document ingestion, vector indexing, and HybridRAG with per-KB API key auth."
authors = [
    { name = "DanielChung520", email = "daniel@dllm.ai" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

# ─────────────────────────────────────────────────────────────────
# Runtime dependencies (added in waves; start with the foundation)
# ─────────────────────────────────────────────────────────────────
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # CLI
    "typer>=0.13.0",
    "rich>=13.0.0",
    # Config & validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # Logging
    "structlog>=24.4.0",
    # HTTP client (for outbound calls)
    "httpx>=0.27.0",
    "openai>=1.50.0",
    # Auth helpers
    "bcrypt>=4.2.0",
    # Task queue (Celery + Redis)
    "celery[redis]>=5.4.0",
    "redis>=5.1.0",
    # Datastores
    "python-arango>=8.0.0",
    "qdrant-client>=1.12.0",
    "boto3>=1.35.0",          # SeaweedFS S3 API
    "botocore>=1.35.0",
    # Document parsing
    "pymupdf>=1.24.0",         # PDF
    "python-docx>=1.1.0",      # DOCX
    "Pillow>=10.4.0",          # image preprocessing
    "markdown>=3.7",
    "beautifulsoup4>=4.12.0",  # HTML→text fallback
    # Tokenization & chunking
    "tiktoken>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",        # for FastAPI TestClient
    "fakeredis>=2.26.0",    # Celery testing
    "mypy>=1.13.0",
    "ruff>=0.7.0",
]

[project.scripts]
kag = "kag.cli:main"

# ─────────────────────────────────────────────────────────────────
# uv-specific config
# ─────────────────────────────────────────────────────────────────

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "fakeredis>=2.26.0",
    "mypy>=1.13.0",
    "ruff>=0.7.0",
]

# ─────────────────────────────────────────────────────────────────
# Tool configs
# ─────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers --strict-config"
markers = [
    "integration: marks tests that require external services (deselect with -m 'not integration')",
    "slow: marks slow tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]  # line-too-long handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true

# ─────────────────────────────────────────────────────────────────
# Build backend
# ─────────────────────────────────────────────────────────────────
[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"
